tests/baselines/reference/inheritanceMemberAccessorOverridingProperty(strict=true).errors.txt
inheritanceMemberAccessorOverridingProperty.ts(2,5): error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
inheritanceMemberAccessorOverridingProperty.ts(6,9): error TS2611: 'x' is defined as a property in class 'a', but is overridden here in 'b' as an accessor.


==== inheritanceMemberAccessorOverridingProperty.ts (2 errors) ====
    class a {
        x: string;
        ~
!!! error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
    }
    
    class b extends a {
        get x() {
            ~
!!! error TS2611: 'x' is defined as a property in class 'a', but is overridden here in 'b' as an accessor.
            return "20";
        }
        set x(aValue: string) {
    
        }
    }